--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "vue-image-crop-upload": "^3.0.3",
+        "vue-loading-overlay": "^3.4.2",
         "vue-multiselect": "^2.1.6",
         "vue-toast-notification": "^0.6.1"
     }
