--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "leaflet": "^1.7.1",
         "vue-image-crop-upload": "^3.0.3",
         "vue-loading-overlay": "^3.4.2",
         "vue-multiselect": "^2.1.6",
-        "vue-toast-notification": "^0.6.1"
+        "vue-toast-notification": "^0.6.1",
+        "vue2-leaflet": "^2.7.0"
     }
 }
