--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
+        "pusher/pusher-php-server": "~3.0",
         "spatie/laravel-welcome-notification": "^2.2"
     },
     "require-dev": {
