--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
+    "/js/pusher.js": "/js/pusher.js",
     "/css/style.css": "/css/style.css",
     "/css/app.css": "/css/app.css",
     "/js/frontend.js": "/js/frontend.js"
