--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
         "axios": "^0.21",
         "bootstrap": "^4.0.0",
         "jquery": "^3.2",
-        "laravel-mix": "^6.0.6",
+        "laravel-mix": "^6.0.22",
         "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "postcss": "^8.1.14",
-        "resolve-url-loader": "^3.1.2",
+        "resolve-url-loader": "^4.0.0",
         "sass": "^1.20.1",
         "sass-loader": "^8.0.0",
         "vue": "^2.5.17",
@@ -25,9 +25,11 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "apexcharts": "^3.27.1",
         "laravel-echo": "^1.10.0",
         "leaflet": "^1.7.1",
         "pusher-js": "4.3",
+        "vue-apexcharts": "^1.6.1",
         "vue-image-crop-upload": "^3.0.3",
         "vue-loading-overlay": "^3.4.2",
         "vue-multiselect": "^2.1.6",
