--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: phpv7.3
+    image: arms-php7.3
     container_name: arms-app
     restart: unless-stopped
     tty: true
